--- a/mod.conf
+++ b/mod.conf
@@ -1,6 +1,6 @@
 name = tnt_plus
-description = KABLOOIE!
+description = KA-BLOOIE!
 author = Ludus
 version = 1.0
-depends = mcl_tnt, mcl_explosions
-optional_depends = mesecons
+depends = mcl_tnt, mcl_explosions, mcl_core, mcl_farming, mcl_buckets, mcl_mobitems, mcl_crafting_table, mcl_wool, mcl_furnaces, mcl_beds
+optional_depends = mcl_sounds, mcl_mobitems, doc_identifier, mesecons
